2020-01-07  6.9.10-85 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-85, GIT revision 15...

2020-01-07  6.9.10-85 Cristy  <quetzlzacatenango@image...>
  * Support Fx do() iterator.
  * `magick -size 100x100 xc:black black.pnm` no longer creates a white image
    (reference https://github.com/ImageMagick/ImageMagick/issues/1817).

2020-01-04  6.9.10-84 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-84, GIT revision 15212:a45335c:20200104.

2020-01-01  6.9.10-84 Cristy  <quetzlzacatenango@image...>
  * Support extended Fx assignment operators (e.g. *=, /=, ++, --, etc.)
  * Support Fx for() iterator.
	* Optimize Fx performance.
	* Ensure circle.rb renders the same for IMv6 and IMv7 (reference
    https://github.com/rmagick/rmagick/issues/905).

2019-12-30  6.9.10-83 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-83, GIT revision 15184:9f64323:20191230.

2019-12-28  6.9.10-83 Cristy  <quetzlzacatenango@image...>
  * PSD: only set the alpha channel when type is not 0.
  * Fix Lab to custom profile (CMYK or RGB) conversion bug (reference
    https://imagemagick.org/discourse-server/viewtopic.php?f=3&t=37318).

2019-12-27  6.9.10-82 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-82, GIT revision 15167:12b7f07:20191226.

2019-12-26  6.9.10-82 Cristy  <quetzlzacatenango@image...>
  * Fix Build failure with MinGW-w64 (reference
    https://github.com/ImageMagick/ImageMagick6/issues/67).
  * Inject image profile properties immediately after the image is read.

2019-12-24  6.9.10-81 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-81, GIT revision 15151:1444366:20191224.

2019-12-18  6.9.10-81 Cristy  <quetzlzacatenango@image...>
  * Replace pseudo-random number generator with a Xoshiro generator.
  * Define MagickAddressType (reference
    https://imagemagick.org/discourse-server/viewtopic.php?f=3&t=3729).
