@@ -1,3 +1,7 @@
+
+2020-01-11  6.9.10-86 Dirk Lemstra <dirk@lem.....org>
+  * Also support svg:xml-parse-huge when using librsvg.
+
 2020-01-07  6.9.10-85 Cristy  <quetzlzacatenango@image...>
   * Release ImageMagick version 6.9.10-85, GIT revision 15...
 
